--- a/scenes/Makefile.windows
+++ b/scenes/Makefile.windows
@@ -1,5 +1,5 @@
 
-BLENDER="C:\Program Files\Blender Foundation\Blender 2.90\blender.exe"
+BLENDER="D:\Install\Blender\blender.exe"
 DIST=../dist
 
 all : \
